# bayalign

./: .gitignore  README.md  check_gpu.py  export_requirements.sh  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt  requirements.txt
.github/workflows/: workflow.yml
bayalign/: inference.py  mcmc.py  pointcloud.py  score.py  sphere.py
examples/: benchmark_scores_3d3d.py  cryo_utils.py  gmm2img.py  plotting_utils.py  reg_3d2d.ipynb  reg_3d2d_synthetic_mcmc.py  reg_cryo3d2d_tesselation.py  test_grad.py  test_grad_cryoem_data.py  test_grad_synthetic_data.py
examples/data/ribosome_80S/: model3d_1000.npz  model3d_2000.npz
src/bayalign/: cryo_utils.py  kdtree.py  pointcloud.py  score.py  sphere_tesselation.py  utils.py
src/bayalign/viz/: plot.py
tests/: test_grad_cryoem_data.py  test_grad_synthetic_data.py
